fix: product alignment

--- a/src/Pages/products/Product/Product.css
+++ b/src/Pages/products/Product/Product.css
@@ -10,7 +10,7 @@
 }
 
 .Product-wrapper__product-info {
-    margin: 50px 0;
+    margin-top: 75px;
     flex-flow: row wrap;
     gap: 30px;
 }
@@ -30,12 +30,15 @@
     width: auto;
 }
 
+.Product-wrapper__more-amazing-features-wrapper{
+    margin-top: 75px;
+}
+
 .Product-wrapper__more-amazing-features {
     width: 100%;
     background-color: #F3F6FD;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    margin-top: 50px;
     padding: 20px;
 }
 
@@ -51,11 +54,15 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.SubcriptionPlansWrapper-product{
+    margin-top: 75px;
+}
+
 .SubcriptionPlansWrapper__head-text {
     width: 100%;
     font-size: 40px;
     font-weight: 600;
-    margin: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
